--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+body *{
 	margin:0;
 	padding:0;
 	-webkit-box-sizing:border-box;
@@ -53,10 +53,8 @@ span{
 background:url(../images/bg.png);
 }
 .header_area > a {
-	
 	display:block;
 	width:200px;
-	padding:10px 10px 5px;
 	margin:0 auto;
 	text-align:center;
 	color:#868684;
@@ -66,11 +64,13 @@ background:url(../images/bg.png);
 .header_area  h1 {
 	color:#868684;
 	font-size:50px;
+	padding-top:10px;
 }
 
 .header_area  a  h5{
 	text-transform:uppercase;
 	color:#868684;
+	padding-bottom:5px;
 }
 
 .menu_area {
@@ -238,6 +238,7 @@ background:url(../images/bg.png);
 .recent-blog  h3,
 .footer-top_area .item h3  {
 	margin-bottom: 15px;
+	color:#2A2B26;
 }
 
 .recent-work_area .item {
