--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
-body *{
+*{
 	margin:0;
 	padding:0;
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
-	
 }
 
 body{
 	font-family:calibri;
+	color:#2A2B26;
 }
 
 @font-face {
@@ -25,9 +25,6 @@ a{
 	color:#000;
 }
 
-h1,h2,h3,h4,h5,h6{
-	color:#2A2B26;
-}
 
 .floatLeft{float:left}
 .floatRight{float:right}
@@ -138,6 +135,11 @@ background:url(../images/bg.png);
 	border: 0 none;
 	cursor:pointer;
 }
+#search:focus,
+#submit:focus{
+	outline:none;
+}
+
 
 /* slider css*/
 .silder_area {
@@ -371,7 +373,7 @@ background:url(../images/bg.png);
 .footer-top_area {
 	background: #DCDCDA ;
 	padding: 50px 0;
-	display: table;
+	overflow:hidden;
 	width: 100%;
 	line-height: 22px;
 	position: relative;
